--- a/index.html
+++ b/index.html
@@ -146,26 +146,34 @@
             <p>Direccion: Av. Los Próceres N° 1280, Distrito de Los Olivos, Lima, Perú.</p>
             <p>Telefono: +51 987654321</p>
             <p>Correo: pasteleriaFyL@gmail.com</p>
-        </div>
-
-        <div class="footer-content redes">
-            <h3>NUESTRAS REDES</h3>
-            
-            <div class="icon-group">
-                <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-instagram"></i>
-            </div>
-
-            <div class="icon-group">
-                <i class="fa-brands fa-x-twitter"></i>
-                <i class="fa-brands fa-tiktok"></i>
-            </div>
-        </div>
-
-        <div class="logo">
+            <div class="logo">
             <img src="img/logotipo.png" alt="logotipo">
         </div>
 
+        </div>
+
+         <!-- SECCIÓN DE REDES SOCIALES -->
+            <div class="footer-social">
+                <h3>Nuestras Redes</h3>
+                <div class="social-icons">
+                    <div class="social-icon">
+                        <i class="fab fa-facebook-f"></i>
+                        <span>Facebook</span>
+                    </div>
+                    <div class="social-icon">
+                        <i class="fab fa-instagram"></i>
+                        <span>Instagram</span>
+                    </div>
+                    <div class="social-icon">
+                        <i class="fab fa-twitter"></i>
+                        <span>Twitter</span>
+                    </div>
+                    <div class="social-icon">
+                        <i class="fab fa-tiktok"></i>
+                        <span>TikTok</span>
+                    </div>
+                </div>
+            </div>
         <div class="comentario">
             <p>© Todos los Derechos Reservados.</p>
         </div>
