--- a/pages/panaderia.html
+++ b/pages/panaderia.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/productos.css">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
@@ -179,26 +179,34 @@ function cerrarSupervista() {
             <p>Direccion: Av. Los Próceres N° 1280, Distrito de Los Olivos, Lima, Perú.</p>
             <p>Telefono: +51 987654321</p>
             <p>Correo: pasteleriaFyL@gmail.com</p>
-        </div>
-
-        <div class="footer-content redes">
-            <h3>NUESTRAS REDES</h3>
-            
-            <div class="icon-group">
-                <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-instagram"></i>
-            </div>
-
-            <div class="icon-group">
-                <i class="fa-brands fa-x-twitter"></i>
-                <i class="fa-brands fa-tiktok"></i>
-            </div>
-        </div>
-
-        <div class="logo">
+            <div class="logo">
             <img src="../img/logotipo.png" alt="logotipo">
         </div>
 
+        </div>
+
+         <!-- SECCIÓN DE REDES SOCIALES -->
+            <div class="footer-social">
+                <h3>Nuestras Redes</h3>
+                <div class="social-icons">
+                    <div class="social-icon">
+                        <i class="fab fa-facebook-f"></i>
+                        <span>Facebook</span>
+                    </div>
+                    <div class="social-icon">
+                        <i class="fab fa-instagram"></i>
+                        <span>Instagram</span>
+                    </div>
+                    <div class="social-icon">
+                        <i class="fab fa-twitter"></i>
+                        <span>Twitter</span>
+                    </div>
+                    <div class="social-icon">
+                        <i class="fab fa-tiktok"></i>
+                        <span>TikTok</span>
+                    </div>
+                </div>
+            </div>
         <div class="comentario">
             <p>© Todos los Derechos Reservados.</p>
         </div>
